--- a/nextjs-docker/package.json
+++ b/nextjs-docker/package.json
@@ -10,6 +10,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.1",
+    "typescript": "^5.7.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
