--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker Compose images
+      - name: Install Docker Compose
         run: |
-          docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml push
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Build Docker Compose Images
+        run: docker-compose -f docker-compose.yml build
+
+      - name: Push Docker Compose Images
+        run: docker-compose -f docker-compose.yml push
