--- a/nextjs-docker/package.json
+++ b/nextjs-docker/package.json
@@ -20,6 +20,7 @@
     "@types/react": "19.0.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
