--- a/nextjs-docker/package.json
+++ b/nextjs-docker/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "lint": "next lint",
+    "lint-fix": "next lint --fix"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
