--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "build": "next build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
@@ -12,6 +10,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "latest",
+    "mapbox-gl": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
