--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "mapbox-gl": "^2.15.0",
     "next": "latest",
-    "mapbox-gl": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "7.0.21",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "autoprefixer": "^10.4.20",
