--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       }
     ]
   },
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts", "prettier.config.js"],
   "exclude": ["node_modules"]
 }
