--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@suspensive/react-query": "^2.18.10",
     "@tanstack/react-query": "^5.62.8",
     "class-variance-authority": "^0.7.1",
-    "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-map-gl": "^7.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "react-hook-form": "^7.51.3",
     "zod": "^3.22.5"
   },
   "devDependencies": {
