--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
-    "@radix-ui/react-slot": "^1.1.1",
     "@suspensive/react-query": "^2.18.10",
     "@tanstack/react-query": "^5.62.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.21",
     "recharts": "^2.15.0",
