--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@suspensive/react-query": "^2.18.10",
     "@tanstack/react-query": "^5.62.8",
@@ -34,9 +31,7 @@
     "react-map-gl": "7.0.21",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "react-hook-form": "^7.51.3",
-    "zod": "^3.22.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.1",
